[package]
name = "setup-deploy-keys"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[[bin]]
name = "deploy"
path = "src/deploy.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
