[package]
name = "setup-deploy-keys"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2021"

[[bin]]
name = "deploy"
path = "src/deploy.rs"

[[bin]]
name = "clean-unused-checkouts"
path = "src/clean_unused_checkouts.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
walkdir = "2.4"
 
[dev-dependencies]
tempfile = "3.10"

