# The Fastly function is built inside a virtual Terragrunt environment. Only the
# crates-io module is copied into this environment, which means it cannot be a
# part of the workspace at the root of this repository.
[workspace]

[package]
name = "compute-static"
description = "Compute@Edge function for static.crates.io"
version = "0.1.0"
edition = "2021"

publish = false

[profile.release]
debug = 1

[dependencies]
derive_builder = "0.12.0"
fastly = "0.9.1"
log = "0.4.17"
log-fastly = "0.9.1"
once_cell = "1.18.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
time = { version = "0.3.17", features = ["serde-human-readable"] }
