[package]
name = "s3-tsv-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.106.0"
aws_lambda_events = { version = "0.18.0", default-features = false, features = ["cloudwatch_events"] }

lambda_runtime = "0.14.4"
tokio = { version = "1", features = ["macros"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
